--- a/index.html
+++ b/index.html
@@ -1,19 +1,116 @@
-<!--
- * @Author: 张海洋
- * @Date: 2025-02-25 09:08:54
- * @Description: 
- * @LastEditors: 张海洋
- * @LastEditTime: 2025-02-25 09:09:11
- * @FilePath: \sand-components-vbene:\Awork\xiaocheng\1.html
--->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    asdasd
+    <div class="content">
+        <div class="h1">
+            免费领取夸克网盘1TB空间，夸克每天领取容量教程
+        </div>
+        <div class="p">
+            夸克网盘“每天领容量”方法指南：
+        </div>
+        <div class="p" style="color: rgb(224, 62, 45)">
+            ①新用户注册第一天领取1T容量：
+        </div>
+        <div class="p" style="color: rgb(224, 62, 45)">
+            新用户，用手机在你的手机软件商店下载夸克app，然后保存我分享的任意一个文件，即可领取1T容量；
+        </div>
+        <div class="p" style="color: rgb(230, 126, 35);">
+            注意，必须是用手机，用电脑领不到容量（可以用手机领了之后再电脑上使用）。
+        </div>
+        <div class="p">
+            手机注册并转存此文件，即可免费领取1TB，第二天签到继续领取空间！
+        </div>
+        <div class="p" style="color: rgb(224, 62, 45)">
+            转存领取1T容量专属链接：
+        </div>
+        <div class="p link">
+            <a href="https://pan.quark.cn/s/ec352ff96e5a">https://pan.quark.cn/s/ec352ff96e5a</a>
+        </div>
+        <div class="img">
+            <img src="./static/1.jpg" mode="widthFix"></img>
+        </div>
+        <div class="p" style="color: rgb(224, 62, 45)">
+            ②如何持续领容量：第二天，你继续登录夸克网盘可以继续领容量，以后每天登录每天领，还会翻倍，而且是永久容量，第七天免费领取1024MB！
+        </div>
+        <div class="img">
+            <img src="/static/2.png" mode="widthFix"></img>
+        </div>
+        <div class="p" style="color: rgb(224, 62, 45)">
+            ③夸克网盘唯一缺点是，和百度网盘一样，不买会员存个文件慢得像蜗牛，买了会员快得像火箭
+        </div>
+        <div class="p" style="color: rgb(224, 62, 45)">
+            我个人体验，夸克网盘的客户端比百度网盘好用，会员转存下载移动文件等操作都比百度网盘快
+        </div>
+        <div id="btn">
+            免费领取夸克网盘1TB空间
+        </div>
+    </div>
 </body>
+<script>
+    let btn = document.getElementById('btn');
+    btn.onclick = function () {
+        window.open('https://pan.quark.cn/s/ec352ff96e5a');
+    }
+</script>
+<style>
+    .content {
+        min-height: 100vh;
+        background: #fafafa;
+        padding: 12px;
+        padding-bottom: 60px;
+
+    }
+
+    .btn {
+        position: fixed;
+        bottom: 20px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        height: 40px;
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        font-size: 13rpx;
+        background: #526efa;
+        border-radius: 100px;
+    }
+
+    .h1 {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+
+    .p {
+        font-size: 12px;
+        color: #333;
+        margin-bottom: 10px;
+    }
+
+    .link {
+        text-decoration: underline;
+        color: #526efa;
+    }
+
+    .img {
+        width: 100%;
+        height: auto;
+    }
+    img{
+        width: 100%;
+        height: auto;
+    }
+</style>
+
 </html>
