--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             ②如何持续领容量：第二天，你继续登录夸克网盘可以继续领容量，以后每天登录每天领，还会翻倍，而且是永久容量，第七天免费领取1024MB！
         </div>
         <div class="img">
-            <img src="/static/2.png" mode="widthFix"></img>
+            <img src="./static/2.png" mode="widthFix"></img>
         </div>
         <div class="p" style="color: rgb(224, 62, 45)">
             ③夸克网盘唯一缺点是，和百度网盘一样，不买会员存个文件慢得像蜗牛，买了会员快得像火箭
@@ -69,7 +69,7 @@
 
     }
 
-    .btn {
+    #btn {
         position: fixed;
         bottom: 20px;
         left: 0;
